# qtdeclarative

./: .cmake.conf  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  REUSE.toml  dependencies.yaml  licenseRule.json  qt_cmdline.cmake
examples/quick/quickshapes/weatherforecast/: CMakeLists.txt  REUSE.toml  main.qml  qt_attribution.json
examples/quick/vectorimage/: CMakeLists.txt
examples/quickcontrols/: CMakeLists.txt
examples/quickcontrols/contactlist/: ContactDialog.qml  ContactForm.ui.qml  ContactList.qml  contactmodel.cpp  contactmodel.h
examples/quickcontrols/eventcalendar/: eventmodel.h  sqleventdatabase.cpp  sqleventdatabase.h
examples/quickcontrols/flatstyle/: CMakeLists.txt
examples/quickcontrols/gallery/: CMakeLists.txt  gallery.cpp  gallery.qml
examples/quickcontrols/gallery/pages/: ButtonPage.qml  DialPage.qml  MonthGridPage.qml  ProgressBarPage.qml  RangeSliderPage.qml  ScrollBarPage.qml  ScrollIndicatorPage.qml  SearchFieldPage.qml  SliderPage.qml  SpinBoxPage.qml  TextAreaPage.qml  TextFieldPage.qml  ToolBarPage.qml
examples/quickcontrols/spreadsheets/Spreadsheets/: CMakeLists.txt  RowHeaderView.qml
examples/quickcontrols/stylekit/: .gitignore  CMakeLists.txt  Main.qml  main.cpp  noise.frag  wave.frag
examples/quickcontrols/stylekit/styles/: CustomDelegates.qml  Experimental.qml  Haze.qml  Plain.qml  Vitrum.qml
examples/quickcontrols/tableofcontents/: CMakeLists.txt
examples/quickcontrols/texteditor/: CMakeLists.txt
examples/quickcontrols/wearable/Wearable/: AlarmsPage.qml  Main.qml  SettingsPage.qml
src/labs/assetdownloader/: CMakeLists.txt
src/labs/stylekit/: ApplicationWindow.qml  Button.qml  CMakeLists.txt  CheckBox.qml  ComboBox.qml  Frame.qml  GroupBox.qml  ItemDelegate.qml  Label.qml  Page.qml  Pane.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RangeSlider.qml  ScrollBar.qml  ScrollIndicator.qml  ScrollView.qml  Slider.qml  SpinBox.qml  Style.qml  StyleAnimation.qml  StyleKitDelegate.qml  StyledItem.qml  Switch.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolBar.qml  ToolButton.qml  ToolSeparator.qml  qqstylekit.cpp  qqstylekit_p.h  qqstylekitanimation.cpp  qqstylekitcontrol.cpp  qqstylekitcontrol_p.h  qqstylekitcontrolproperties.cpp  qqstylekitcontrolproperties_p.h  qqstylekitcontrols.cpp  (+33 more)
src/labs/stylekit/doc/: qtlabsstylekit.qdocconf
src/labs/stylekit/impl/: BackgroundAndIndicatorDelegate.qml  BackgroundDelegate.qml  CMakeLists.txt  DelegateContainer.qml  DelegateSingleton.qml  FallbackStyle.qml  HandleDelegate.qml  IndicatorDelegate.qml  Shadow.qml  qqstylekitdelegatecontainer.cpp  qqstylekitdelegatecontainer_p.h  qqstylekitlayout.cpp  qqstylekitlayout_p.h
src/quickcontrols/: CMakeLists.txt  configure.cmake  qquickattachedpropertypropagator.cpp  qquickstyle.cpp  qquickstyleplugin.cpp  qtquickcontrols2plugin.cpp
src/quickcontrols/basic/: CMakeLists.txt  DoubleSpinBox.qml  MenuItem.qml  SearchField.qml  TableViewDelegate.qml  TextArea.qml  TextField.qml  qquickbasictheme.cpp  qtquickcontrols2basicforeign.cpp  qtquickcontrols2basicstyleplugin.cpp
src/quickcontrols/basic/impl/: CMakeLists.txt  TextEditingContextMenu.qml  qquickbasicbusyindicator.cpp  qquickbasicdial.cpp  qquickbasicprogressbar.cpp
src/quickcontrols/doc/: qtquickcontrols.qdocconf
src/quickcontrols/doc/snippets/: qtquickcontrols-doublespinbox.qml  qtquickcontrols-searchfield-currentIndex.qml
src/quickcontrols/doc/src/: qtquickcontrols-basic.qdoc  qtquickcontrols-buttons.qdoc  qtquickcontrols-containers.qdoc  qtquickcontrols-customize.qdoc  qtquickcontrols-delegates.qdoc  qtquickcontrols-fileselectors.qdoc  qtquickcontrols-fusion.qdoc  qtquickcontrols-icons.qdoc  qtquickcontrols-imagine.qdoc  qtquickcontrols-index.qdoc  qtquickcontrols-indicators.qdoc  qtquickcontrols-input.qdoc  qtquickcontrols-material.qdoc  qtquickcontrols-menus.qdoc  qtquickcontrols-navigation.qdoc  qtquickcontrols-popups.qdoc  qtquickcontrols-qmltypes.qdoc  qtquickcontrols-separators.qdoc  qtquickcontrols-styles.qdoc  qtquickcontrols-toc.qdoc  qtquickcontrols-universal.qdoc  (+2 more)
src/quickcontrols/fluentwinui3/: CMakeLists.txt  ComboBox.qml  DoubleSpinBox.qml  Menu.qml  MenuItem.qml  RoundButton.qml  SearchField.qml  SpinBox.qml  TextArea.qml  TextField.qml  ToolButton.qml  qquickfluentwinui3theme.cpp  qquickfluentwinui3theme_p.h  qtquickcontrols2fluentwinui3styleplugin.cpp
src/quickcontrols/fusion/: Button.qml  CMakeLists.txt  DoubleSpinBox.qml  MenuItem.qml  RoundButton.qml  SearchField.qml  TextArea.qml  TextField.qml  qquickfusionstyle.cpp  qquickfusionstyle_p.h  qquickfusiontheme.cpp  qtquickcontrols2fusionstyleplugin.cpp
src/quickcontrols/imagine/: CMakeLists.txt  DoubleSpinBox.qml  MenuItem.qml  SearchField.qml  TextArea.qml  TextField.qml  qquickimaginestyle.cpp  qquickimaginetheme.cpp  qtquickcontrols2imaginestyleplugin.cpp
src/quickcontrols/ios/: CMakeLists.txt  DoubleSpinBox.qml  SearchField.qml  TextArea.qml  TextField.qml  qquickiostheme.mm  qquickiostheme_p.h  qtquickcontrols2iosstyleplugin.cpp
src/quickcontrols/macos/: CMakeLists.txt  DoubleSpinBox.qml  MenuItem.qml  ProgressBar.qml  RangeSlider.qml  ScrollView.qml  SearchField.qml  Slider.qml  TextArea.qml  TextField.qml  qtquickcontrols2macosstyleplugin.cpp
src/quickcontrols/material/: CMakeLists.txt  DoubleSpinBox.qml  MenuItem.qml  SearchField.qml  TextArea.qml  TextField.qml  qquickmaterialstyle.cpp  qquickmaterialtheme.cpp  qtquickcontrols2materialstyleplugin.cpp
src/quickcontrols/native/: CMakeLists.txt
src/quickcontrols/quicknativestyle/: qtquickcontrols2nativestyleplugin.cpp
src/quickcontrols/universal/: CMakeLists.txt  DoubleSpinBox.qml  MenuItem.qml  SearchField.qml  TextArea.qml  TextField.qml  qquickuniversalstyle.cpp  qquickuniversaltheme.cpp  qtquickcontrols2universalstyleplugin.cpp
src/quickcontrols/windows/: CMakeLists.txt  DoubleSpinBox.qml  MenuItem.qml  ScrollView.qml  SearchField.qml  TextArea.qml  TextField.qml  qtquickcontrols2windowsstyleplugin.cpp
tests/auto/quick/: CMakeLists.txt
tests/auto/quickdialogs/: CMakeLists.txt
(+3007 files in other folders)
