# Copyright (C) 2022 The Qt Company Ltd.
# SPDX-License-Identifier: BSD-3-Clause

# Limit set of tests to run for static Qt builds.
if(QT_BUILD_MINIMAL_STATIC_TESTS)
    return()
endif()

add_subdirectory(drawingmodes)
add_subdirectory(geometry)
add_subdirectory(nodes)
add_subdirectory(qquickpixmapcache)
add_subdirectory(qquicktransform)

if(QT_FEATURE_private_tests)
    add_subdirectory(doc)
    add_subdirectory(examples)
    add_subdirectory(nokeywords)
    add_subdirectory(pointerhandlers)
    add_subdirectory(propertyrequirements)
    if(QT_FEATURE_accessibility)
        add_subdirectory(qquickaccessible)
    endif()
    add_subdirectory(qquickanchors)
    add_subdirectory(qquickanimatedimage)
    add_subdirectory(qquickanimatedsprite)
    add_subdirectory(qquickanimationcontroller)
    add_subdirectory(qquickanimations)
    add_subdirectory(qquickanimators)
    add_subdirectory(qquickapplication)
    add_subdirectory(qquickattachedpropertypropagator)
    add_subdirectory(qquickbehaviors)
    add_subdirectory(qquickborderimage)
    if(QT_FEATURE_qml_labs)
        add_subdirectory(qquickboundaryrule)
    endif()
    add_subdirectory(qquickcanvasitem)
    add_subdirectory(qquickcolorgroup)
    add_subdirectory(qquickdeliveryagent)
    if(QT_FEATURE_quick_designer)
        add_subdirectory(qquickdesignersupport)
    endif()
    add_subdirectory(qquickdrag)
    add_subdirectory(qquickdragattached)
    add_subdirectory(qquickdroparea)
    add_subdirectory(qquickdynamicpropertyanimation)
    add_subdirectory(qquickflickable)
    add_subdirectory(qquickflipable)
    add_subdirectory(qquickfocusscope)
    add_subdirectory(qquickfontloader)
    add_subdirectory(qquickfontloader_static)
    add_subdirectory(qquickfontmetrics)
    if(QT_FEATURE_opengl)
        add_subdirectory(qquickframebufferobject)
    endif()
    add_subdirectory(qquickgraphicsinfo)
    add_subdirectory(qquickgridview)
    add_subdirectory(qquickimage)
    add_subdirectory(qquickimageprovider)
    add_subdirectory(qquickitem)
    add_subdirectory(qquickitem2)
    add_subdirectory(qquickitemlayer)
    add_subdirectory(qquicklayouts)
    add_subdirectory(qquicklistview)
    add_subdirectory(qquicklistview2)
    add_subdirectory(qquickloader)
    add_subdirectory(qquickmousearea)
    add_subdirectory(qquickmultipointtoucharea)
    add_subdirectory(qquickpainteditem)
    add_subdirectory(qquickpalette)
    add_subdirectory(qquickpath)
    add_subdirectory(qquickpathview)
    add_subdirectory(qquickpincharea)
    add_subdirectory(qquickpositioners)
    add_subdirectory(qquickrectangle)
    add_subdirectory(qquickrendercontrol)
    add_subdirectory(qquickrepeater)
    add_subdirectory(qquickrhiitem)
    add_subdirectory(qquicksafearea)
    add_subdirectory(qquickscreen)
    add_subdirectory(qquickshadereffect)
    add_subdirectory(qquickshortcut)
    add_subdirectory(qquicksmoothedanimation)
    add_subdirectory(qquickspringanimation)
    add_subdirectory(qquickspritesequence)
    add_subdirectory(qquickstates)
    add_subdirectory(qquickstyledtext)
    add_subdirectory(qquicksystempalette)
    if(QT_FEATURE_qml_labs)
        add_subdirectory(qquicktableview)
    endif()
    add_subdirectory(qquicktext)
    add_subdirectory(qquicktextdocument)
    add_subdirectory(qquicktextedit)
    add_subdirectory(qquicktextinput)
    add_subdirectory(qquicktimeline)
    add_subdirectory(qquicktreeview)
    add_subdirectory(qquickvaluetypes)
    add_subdirectory(qquickview)
    add_subdirectory(qquickview_extra)
    add_subdirectory(qquickvisualdatamodel)
    add_subdirectory(qquickwindow)
    add_subdirectory(qquickwindowcontainer)
    add_subdirectory(rendernode)
    add_subdirectory(scenegraph)
    if(QT_FEATURE_qml_labs)
        add_subdirectory(sharedimage)
    endif()
    add_subdirectory(softwarerenderer)
    add_subdirectory(touchmouse)
endif()
